# RayTracing-Project

./: CMakeLists.txt  README.md  main.cpp
GeometricObjects/: CollisionResult.cpp  CollisionResult.h  Polygon.cpp  Polygon.h  Shpere.h  Sphere.cpp
Headers/: CoordinateSystemTranlation.h
MathLibrary/: CoordinateSystemTranslation.cpp  Matrix4D.cpp  Matrix4D.h  Point4D.cpp  Point4D.h  Vector4D.cpp  Vector4D.h
RayTracingElements/: Light.cpp  Light.h  Node.cpp  Node.h  Ray4D.cpp  Ray4D.h  RayShooter.cpp  RayShooter.h  Scene.cpp  Scene.h
